crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-scripts-task-override/snapshots/query - task cached by default.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
info:
  args:
    - run
    - build
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-scripts-task-override
---
{
  "graph": [
    {
      "key": [
        "<workspace>/",
        "build"
      ],
      "node": {
        "task_display": {
          "package_name": "@test/cache-scripts-task-override",
          "task_name": "build",
          "package_path": "<workspace>/"
        },
        "items": [
          {
            "execution_item_display": {
              "task_display": {
                "package_name": "@test/cache-scripts-task-override",
                "task_name": "build",
                "package_path": "<workspace>/"
              },
              "command": "vtt print-file package.json",
              "and_item_index": null,
              "cwd": "<workspace>/"
            },
            "kind": {
              "Leaf": {
                "Spawn": {
                  "cache_metadata": {
                    "spawn_fingerprint": {
                      "cwd": "",
                      "program_fingerprint": {
                        "OutsideWorkspace": {
                          "program_name": "vtt"
                        }
                      },
                      "args": [
                        "print-file",
                        "package.json"
                      ],
                      "env_fingerprints": {
                        "fingerprinted_envs": {},
                        "untracked_env_config": [
                          "<default untracked envs>"
                        ]
                      }
                    },
                    "execution_cache_key": {
                      "UserTask": {
                        "task_name": "build",
                        "and_item_index": 0,
                        "extra_args": [],
                        "package_path": ""
                      }
                    },
                    "input_config": {
                      "includes_auto": true,
                      "positive_globs": [],
                      "negative_globs": []
                    }
                  },
                  "spawn_command": {
                    "program_path": "<tools>/vtt",
                    "args": [
                      "print-file",
                      "package.json"
                    ],
                    "all_envs": {
                      "NO_COLOR": "1",
                      "PATH": "<workspace>/node_modules/.bin:<tools>"
                    },
                    "cwd": "<workspace>/"
                  }
                }
              }
            }
          }
        ]
      },
      "neighbors": []
    }
  ],
  "concurrency_limit": 10
}
